Fixed alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -563,10 +563,12 @@ textarea {
     }
     .learn-more-btn{
      font-size: 13px;
+     padding:5px 20px;
     }
     .buy-now{
       font-size: 13px;
       font-weight: bolder;
+      padding:5px 20px;
     }
     .review{
         padding:10px 0;
